--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-# Les matchs ne sont pas toujours dans le bon ordre dans le bon ordre
+# Les matchs ne sont pas toujours dans le bon ordre
 # Faire en sorte que, par exemple, la rencontre soit joueur2-joueur3, et non joueur3-joueur2
 # Mieux styliser les second_steps
 # Faire le tableau final
