récap tableau fait

--- a/TODO
+++ b/TODO
@@ -3,3 +3,7 @@
 # Mieux styliser les second_steps
 # Faire le tableau final
 # tester avec poules de 4 en second_steps
+
+
+#Créer un Scoreboard avec ses ScoreboardPlayer
+#Créer la view de création de scoreboard + visualisation du scoreboard
