table on pools; background black on unused cells in pdf; collapse for sets in pool

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-indexage sur les poules
-revoir el goalaverage
+sur les matchs finaux, avoir le classement intégral dans les poules et non les rangs
+
+scratcher un joueur
